--- a/samples/MySquad/MySquad.Android/MySquad.Android.csproj
+++ b/samples/MySquad/MySquad.Android/MySquad.Android.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -52,7 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.0.0.425677" />
+    <PackageReference Include="Xamarin.Forms" Version="4.1.0.555618" />
     <PackageReference Include="Xamarin.Android.Support.ViewPager" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.1" />
@@ -101,10 +101,18 @@
     <Folder Include="Resources\drawable-xxxhdpi\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\src\Xamarin.Forms.DragNDrop.Android\Xamarin.Forms.DragNDrop.Android.csproj">
+      <Project>{c3dc52a4-3bf2-4fe9-96f7-2760b1c75ead}</Project>
+      <Name>Xamarin.Forms.DragNDrop.Android</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\src\Xamarin.Forms.DragNDrop\Xamarin.Forms.DragNDrop.csproj">
+      <Project>{8a854c66-8d09-42be-a6c3-2788f1ed3432}</Project>
+      <Name>Xamarin.Forms.DragNDrop</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MySquad\MySquad.csproj">
       <Project>{868D4167-ECC5-45DD-9DC6-6BB33C61DEEE}</Project>
       <Name>MySquad</Name>
     </ProjectReference>
   </ItemGroup>
- <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
