Added support for added a new marine

--- a/samples/MySquad/MySquad/MySquad.csproj
+++ b/samples/MySquad/MySquad/MySquad.csproj
@@ -20,13 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Views\NewItemPage.xaml.cs">
-      <DependentUpon>NewItemPage.xaml</DependentUpon>
-    </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
     <EmbeddedResource Update="Views\MarinesPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\NewMarinePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\SquadPage.xaml">
